app-lifecycle-management/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx-or-apache.com
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: ngx
          servicePort: 80
      - path: /apache
        backend:
          serviceName: apache
          servicePort: 8080
